tests/e2e/semantics/mutation/string_contains_pattern_invalid.story
a = ""
b = a.contains(pattern: 2)
